--- a/index.html
+++ b/index.html
@@ -1,58 +1,176 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="zh-tW">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>NEtworking and Mobile Systems Lab by nems-nctu</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="CHIA-JUI YEH">
+    <link rel="icon" href="">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <title>CHIA-JUI YEH</title>
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/custom.min.css" rel="stylesheet">
+    <link href="css/font-awesome.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+
+    <!-- Navigate -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <img class="img-responsive" src="" alt="">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="">NEMSLab</a>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#members">Members</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#photos">Photos</a></li>
+            <li class="dropdown">
+              <a href="#links" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">Links<span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li>
+                  <a href="#gitlab">
+                    <i class="fa fa-gitlab" aria-hidden="true"></i>
+                    Gitlab
+                  </a>
+                </li>
+                <li>
+                  <a href="#mail">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                    Mail Server
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>NEtworking and Mobile Systems Lab</h1>
-        <p></p>
+    <!-- About -->
+    <section class="page">
+      <div class="container">
+  		  <div class="jumbotron">
+          <h1>NEMSLab</h1>
+          <small></small>
+      		<p>NEtworking and Mobile Systems Laboratory</p>
+          <p>Since 2016</p>
+  		  </div>
+      </div>
+    </section>
 
+    <!-- Members -->
+    <section id="members" class="page">
+      <h1>Members</h1>
+      <blockquote>
+        <p>
+          The potential students are expected to be willing to learn, to explore, and to code.
+        </p>
+        <p>
+          If you are interested, welcome to join us.
+        </p>
+        <small>Chi-Yu Li</small>
+      </blockquote>
+      <div class="container">
+        <!-- Advisor -->
+        <div class="col-md-12">
+          <h2>Advisor</h2>
+          <div class="col-md-4">
+            <img src="images/chiyuli.jpg" class="img-responsive img-circle img-right">
+          </div>
+          <div class="col-md-8">
+            <h3>李奇育 教授</h3>
+            <h4>
+              <p>
+                Assistant Professor in the Department of Computer Science at NCTU
+              </p>
+            </h4>
+            <h3>
+              <a href="http://people.cs.nctu.edu.tw/~chiyuli/">
+                <i class="fa fa-link" aria-hidden="true"></i>
+              </a>
+              <a href="getmail:chiyuli@cs.nctu.edu.tw">
+                <i class="fa fa-envelope-o" aria-hidden="true"></i>
+              </a>
+              <a href="https://scholar.google.com.tw/citations?user=OtMUXigAAAAJ&hl=en">
+                <i class="fa fa-google" aria-hidden="true"></i>
+              </a>
+            </h3>
+          </div>
+        </div>
+        <!-- Master -->
+        <div class="col-md-12">
+          <h2>Master</h2>
+          <div class="col-md-3 col-xs-6 text-center">
+            <img src="images/master/105/noname.jpg" class="img-responsive img-circle img-center">
+            <h4>葉家睿</h4>
+            <h3>
+              <a href="http://noname0930.github.io"><i class="fa fa-link" aria-hidden="true"></i></a>
+              <a href="getmail:noname19930930@gmail.com">
+                <i class="fa fa-envelope-o" aria-hidden="true"></i>
+              </a>
+              <a href="https://tw.linkedin.com/in/noname0930">
+                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+              </a>
+            </h3>
+          </div>
+          <div class="col-md-3 col-xs-6 text-center">
+            <img src="images/master/105/yylee.jpg" class="img-responsive img-circle img-center">
+            <h4>李曜宇</h4>
+            <h3>
+              <a href=""><i class="fa fa-link" aria-hidden="true"></i></a>
+              <a href="getmail:">
+                <i class="fa fa-envelope-o" aria-hidden="true"></i>
+              </a>
+            </h3>
+          </div>
+        </div>
+      </div>
+    </section>
 
-        <p class="view"><a href="https://github.com/nems-nctu">View My GitHub Profile</a></p>
+    <!-- Projects -->
+    <section id="projects" class="page">
+      <div class="container">
+        <h2>Projects</h2>
+      </div>
+    </section>
 
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+    <!-- Photos -->
+    <section id="photos" class="page">
+      <div class="container">
+        <h2>Photos</h2>
+      </div>
+    </section>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+    <footer id="footer">
+      <div class="container">
+        <div class="col-md-12 text-center">
+          <p class="copyright">
+            Copyright © 2016 NEMSLab All Rights Reserved.
+          </p>
+          <p>
+            Create by <a href="http://noname0930.github.io">Chia-Jui Yeh</a>
+          </p>
+        </div>
+        </div>
+      </div>
+    </footer>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.scrollTo.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
