--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="CHIA-JUI YEH">
     <link rel="icon" href="">
 
-    <title>CHIA-JUI YEH</title>
+    <title>NEMSLab</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.min.css" rel="stylesheet">
