fix members width

--- a/index.html
+++ b/index.html
@@ -73,19 +73,21 @@
 
     <!-- Members -->
     <section id="members" class="page">
-      <h1>Members</h1>
-      <blockquote>
-        <p>
-          The potential students are expected to be willing to learn, to explore, and to code.
-        </p>
-        <p>
-          If you are interested, welcome to join us.
-        </p>
-        <small>Chi-Yu Li</small>
-      </blockquote>
       <div class="container">
+        <div class="col-md-10">
+          <h1>Members</h1>
+          <blockquote>
+            <p>
+              The potential students are expected to be willing to learn, to explore, and to code.
+            </p>
+            <p>
+              If you are interested, welcome to join us.
+            </p>
+            <small>Chi-Yu Li</small>
+          </blockquote>
+        </div>
         <!-- Advisor -->
-        <div class="col-md-12">
+        <div class="col-md-10">
           <h2>Advisor</h2>
           <div class="col-md-4">
             <img src="images/chiyuli.jpg" class="img-responsive img-circle img-right">
