--- a/index.html
+++ b/index.html
@@ -143,6 +143,15 @@
               </a>
             </h3>
           </div>
+          <div class="col-md-3 col-xs-6 text-center">
+            <img src="images/master/105/llf.jpg" class="img-responsive img-circle img-center">
+            <h4>羅吉凡</h4>
+            <h3>
+              <a href="getmail:gsalinaslopez.eic05g@nctu.edu.tw">
+                <i class="fa fa-envelope-o" aria-hidden="true"></i>
+              </a>
+            </h3>
+          </div>
         </div>
       </div>
     </section>
