--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
           <blockquote>
             <p>
               We are inviting all the students (including undergraduate, master, and Phd) who want to work on interesting problems in the areas of networking and mobile systems, to join our lab. 
-              The potential students are welcome to come for a chat with us. Please contact us via email, since the remodeling of our new lab will not be ready until the mid. of Nov.
+              The potential students are welcome to come for a chat with us.
             </p>
+            <p><strong>We are located at 電子資訊大樓 R704.</strong></p>
             <small>NEMS Lab</small>
           </blockquote>
         </div>
