update sdn image

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <h2>Software Defined Networking</h2>
         <div class="col-md-5">
         <blockquote>
-        <img src="images/project_wifi.jpg" class="img-responsive img-center" />
+        <img src="//people.cs.nctu.edu.tw/~chiyuli/images/project_sdn.jpg" class="img-responsive img-center" />
 	</blockquote>
         </div>										
         <div class="col-md-7">
