--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
     </section>
 
-    <!-- Members -->
+    <!-- News -->
     <section id="news" class="page">
       <div class="container">
         <div class="col-md-10">
@@ -66,6 +66,7 @@
               The potential students are welcome to come for a chat with us.
             </p>
             <p><strong>We are located at 電子資訊大樓 R704.</strong></p>
+            <p><i class="fa fa-phone" aria-hidden="true"></i> 03-5712121 #59290</p>
             <small>NEMS Lab</small>
           </blockquote>
         </div>
