--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="CHIA-JUI YEH">
     <link rel="icon" href="">
 
-    <title>NEMSLab</title>
+    <title>NEtworking and Mobile Systems Lab</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="">NEMS Lab</a>
+          <a class="navbar-brand" href="">NEtworking and Mobile Systems Lab</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -58,7 +58,7 @@
     <!-- News -->
     <section id="news" class="page">
       <div class="container">
-        <div class="col-md-10">
+        <div class="col-md-12 col-xs-12">
           <h1>Recruiting</h1>
           <blockquote>
             <p>
@@ -67,7 +67,7 @@
             </p>
             <p><strong>We are located at 電子資訊大樓 R704.</strong></p>
             <p><i class="fa fa-phone" aria-hidden="true"></i> 03-5712121 #59290</p>
-            <small>NEMS Lab</small>
+            <small>NEtworking and Mobile Systems Lab</small>
           </blockquote>
         </div>
     </section>
@@ -75,68 +75,101 @@
     <!-- Members -->
     <section id="members" class="page">
       <div class="container">
-      <div class="col-md-10">
-          <h1>Members</h1>
-      </div>
-        <!-- Advisor -->
-        <div class="col-md-10">
-          <h2>Faculty</h2>
-          <div class="col-md-4">
-            <img src="images/chiyuli.jpg" class="img-responsive img-circle img-right">
+        <div class="col-md-12 col-xs-12">
+            <h1>Members</h1>
+          <!-- Advisor -->
+          <div class="col-md-12 col-xs-12">
+            <h2>Faculty</h2>
+            <div class="col-md-3">
+              <img src="images/chiyuli.jpg" class="img-responsive img-circle img-right">
+            </div>
+            <div class="col-md-9">
+              <h3>李奇育 教授</h3>
+              <h4>
+                <p>
+                  Assistant Professor 
+                </p>
+              </h4>
+              <h3>
+                <a href="http://people.cs.nctu.edu.tw/~chiyuli/">
+                  <i class="fa fa-link" aria-hidden="true"></i>
+                </a>
+                <a href="mailto:chiyuli@cs.nctu.edu.tw">
+                  <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                </a>
+                <a href="https://scholar.google.com.tw/citations?user=OtMUXigAAAAJ&hl=en">
+                  <i class="fa fa-google" aria-hidden="true"></i>
+                </a>
+              </h3>
+            </div>
           </div>
-          <div class="col-md-8">
-            <h3>李奇育 教授</h3>
-            <h4>
-              <p>
-                Assistant Professor 
-              </p>
-            </h4>
-            <h3>
-              <a href="http://people.cs.nctu.edu.tw/~chiyuli/">
-                <i class="fa fa-link" aria-hidden="true"></i>
-              </a>
-              <a href="getmail:chiyuli@cs.nctu.edu.tw">
-                <i class="fa fa-envelope-o" aria-hidden="true"></i>
-              </a>
-              <a href="https://scholar.google.com.tw/citations?user=OtMUXigAAAAJ&hl=en">
-                <i class="fa fa-google" aria-hidden="true"></i>
-              </a>
-            </h3>
+          <!-- Assistant -->
+          <div class="col-md-12 col-xs-12">
+            <h2>Assistant</h2>
+            <div class="col-md-12">
+              <div class="col-md-3 col-xs-4 text-center">
+                <img src="images/male.jpg" class="img-responsive img-circle img-center">
+                <h4>陳暐翰</h4>
+                <h3>
+                  <a href="mailto:alex81527@gmail.com">
+                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                  </a>
+                </h3>
+              </div>
+            </div>
           </div>
-        </div>
-        <!-- Master -->
-        <div class="col-md-12">
-          <h2>Master Students</h2>
-          <div class="col-md-3 col-xs-6 text-center">
-            <img src="images/master/105/noname.jpg" class="img-responsive img-circle img-center">
-            <h4>葉家睿</h4>
-            <h3>
-              <a href="http://noname0930.github.io"><i class="fa fa-link" aria-hidden="true"></i></a>
-              <a href="getmail:noname19930930@gmail.com">
-                <i class="fa fa-envelope-o" aria-hidden="true"></i>
-              </a>
-              <a href="https://tw.linkedin.com/in/noname0930">
-                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-              </a>
-            </h3>
-          </div>
-          <div class="col-md-3 col-xs-6 text-center">
-            <img src="images/master/105/yylee.jpg" class="img-responsive img-circle img-center">
-            <h4>李曜宇</h4>
-            <h3>
-              <a href="getmail:forever3580ya@gmail.com">
-                <i class="fa fa-envelope-o" aria-hidden="true"></i>
-              </a>
-            </h3>
-          </div>
-          <div class="col-md-3 col-xs-6 text-center">
-            <img src="images/master/105/llf.jpg" class="img-responsive img-circle img-center">
-            <h4>羅吉凡</h4>
-            <h3>
-              <a href="getmail:gsalinaslopez.eic05g@nctu.edu.tw">
-                <i class="fa fa-envelope-o" aria-hidden="true"></i>
-              </a>
-            </h3>
+          <!-- Master -->
+          <div class="col-md-12 col-xs-12">
+            <h2>Master Students</h2>
+            <div class="col-md-12">
+              <h3>105</h3>
+              <div class="col-md-3 col-xs-4 text-center">
+                <img src="images/master/105/cjyeh.jpg" class="img-responsive img-circle img-center">
+                <h4>葉家睿</h4>
+                <h3>
+                  <a href="http://noname0930.github.io"><i class="fa fa-link" aria-hidden="true"></i></a>
+                  <a href="mailto:noname19930930@gmail.com">
+                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                  </a>
+                  <a href="https://tw.linkedin.com/in/noname0930">
+                    <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                  </a>
+                </h3>
+              </div>
+              <div class="col-md-3 col-xs-4 text-center">
+                <img src="images/master/105/yylee.jpg" class="img-responsive img-circle img-center">
+                <h4>李曜宇</h4>
+                <h3>
+                  <a href="mailto:forever3580ya@gmail.com">
+                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                  </a>
+                </h3>
+              </div>
+              <div class="col-md-3 col-xs-4 text-center">
+                <img src="images/master/105/gio.jpg" class="img-responsive img-circle img-center">
+                <h4>羅吉凡</h4>
+                <h3>
+                  <a href="mailto:gsalinaslopez.eic05g@nctu.edu.tw">
+                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                  </a>
+                </h3>
+              </div>
+            </div>
+            <div class="col-md-12">
+              <h3>104</h3>
+              <div class="col-md-3 col-xs-4 text-center">
+                <img src="images/master/104/jamie.jpg" class="img-responsive img-circle img-center">
+                <h4>郭建廷</h4>
+                <h3>
+                  <a href="mailto:jamie820103@gmail.com">
+                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                  </a>
+                  <a href="https://www.linkedin.com/in/jamie-kuo-8a73148b">
+                    <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                  </a>
+                </h3>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -145,61 +178,57 @@
     <!-- Projects -->
     <section id="projects" class="page">
       <div class="container">
-      <div class="col-md-10">
-        <h1>Projects</h1>
-      </div>
-      <div class="col-md-12">
-        <h2>Customizable WiFi</h2>
-        <div class="col-md-5">
-        <blockquote>
-        <img src="images/project_wifi.jpg" class="img-responsive img-center" />
-        </blockquote>
-	</div>
-        <div class="col-md-7">
-
-	<p style="font-size:24px">As the Wi-Fi technology becomes pervasive in reality, its usage pattern is also turning highly
-		diversified in operation settings and application scenarios. This leads to new design
-		requirements for Wi-Fi networking solutions in terms of various combinations in throughput, latency and energy efficiency.
-		We believe that
-		both the user demand pull and the technology push call for customizable Wi-Fi solutions.
-	</p>
-
-	</div>
-        </div>
-        <div class="col-md-12">
-        <h2>Mobile Security</h2>
-        <div class="col-md-5">
-        <blockquote>
-        <img src="images/project_security.jpg" class="img-responsive img-center" />
-        </blockquote>
-	</div>
-        <div class="col-md-7">
-	<p style="font-size:24px">To support various advanced services, the mobile Internet technology is evolving
-		from a simple, working design to a resilient, high-performance networking solution suite.
-	       For example, during the evolution from 2G/3G to 4G, the security impact is not fully understood.
-		My research shows that unprecedented malicious attacks can be launched on both mobile devices and
-		the network infrastructure in 3G/4G systems. It is because security loopholes usually lie in the newly offered
-		services (e.g., IoT and D2D) or those legacy ones (e.g., VoLTE) that require new interactions.
-	</p>
-	</div>
-        </div>
-        <div class="col-md-12">
-        <h2>Software Defined Networking</h2>
-        <div class="col-md-5">
-        <blockquote>
-        <img src="images/project_sdn.jpg" class="img-responsive img-center" />
-	</blockquote>
-        </div>
-        <div class="col-md-7">
-	<p style="font-size:24px">To support several new technologies (e.g., IoT, D2D,
-		Multi-RAT, etc.), the future 5G network architecture requires to achieve various goals: high throughput, low delays,
-		massive connectivity, resilience, security, to name a few. It thus needs to be flexible enough to dynamically meet
-		requirements of different technologies. Software-Defined Networking (SDN) can be a holistic solution to such
-		flexibility.
-	</p>
-	</div>
-        </div>
-
+        <div class="col-md-12 col-xs-12">
+          <h1>Projects</h1>
+          <div class="col-md-12 col-xs-12">
+            <h2>Customizable WiFi</h2>
+            <div class="col-md-5">
+              <blockquote>
+              <img src="images/project_wifi.jpg" class="img-responsive img-center" />
+              </blockquote>
+            </div>
+            <div class="col-md-7">
+              <p style="font-size:24px">As the Wi-Fi technology becomes pervasive in reality, its usage pattern is also turning highly
+                diversified in operation settings and application scenarios. This leads to new design
+                requirements for Wi-Fi networking solutions in terms of various combinations in throughput, latency and energy efficiency.
+                We believe that
+                both the user demand pull and the technology push call for customizable Wi-Fi solutions.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-12 col-xs-12">
+            <h2>Mobile Security</h2>
+            <div class="col-md-5">
+              <blockquote>
+              <img src="images/project_security.jpg" class="img-responsive img-center" />
+              </blockquote>
+          	</div>
+            <div class="col-md-7">
+            	<p style="font-size:24px">To support various advanced services, the mobile Internet technology is evolving
+            		from a simple, working design to a resilient, high-performance networking solution suite.
+            	       For example, during the evolution from 2G/3G to 4G, the security impact is not fully understood.
+            		My research shows that unprecedented malicious attacks can be launched on both mobile devices and
+            		the network infrastructure in 3G/4G systems. It is because security loopholes usually lie in the newly offered
+            		services (e.g., IoT and D2D) or those legacy ones (e.g., VoLTE) that require new interactions.
+            	</p>
+            </div>
+          </div>
+          <div class="col-md-12 col-xs-12">
+            <h2>Software Defined Networking</h2>
+            <div class="col-md-5">
+              <blockquote>
+                <img src="images/project_sdn.jpg" class="img-responsive img-center" />
+            	</blockquote>
+            </div>
+            <div class="col-md-7">
+            	<p style="font-size:24px">To support several new technologies (e.g., IoT, D2D,
+            		Multi-RAT, etc.), the future 5G network architecture requires to achieve various goals: high throughput, low delays,
+            		massive connectivity, resilience, security, to name a few. It thus needs to be flexible enough to dynamically meet
+            		requirements of different technologies. Software-Defined Networking (SDN) can be a holistic solution to such
+            		flexibility.
+            	</p>
+            </div>
+          </div>
       </div>
     </section>
 
@@ -207,7 +236,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <p class="copyright">
-            Copyright © 2016 NEMSLab All Rights Reserved.
+            Copyright © 2016 NEtworking and Mobile Systems Lab All Rights Reserved.
           </p>
           <p>
             Create by <a href="http://noname0930.github.io">Chia-Jui Yeh</a>
