meta for gsuite

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-tW">
   <head>
+    <meta name="google-site-verification" content="zpQcBsNrZu-CWdjJ_NwFcFzSPaLQbly4zUcSCViLbUQ" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -34,8 +35,6 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#members">Members</a></li>
             <li><a href="#projects">Projects</a></li>
-              </ul>
-            </li>
           </ul>
         </div>
       </div>
