--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-tW">
   <head>
-    <meta name="google-site-verification" content="zpQcBsNrZu-CWdjJ_NwFcFzSPaLQbly4zUcSCViLbUQ" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -78,36 +77,33 @@
             <h1>Members</h1>
           <!-- Advisor -->
           <div class="col-md-12 col-xs-12">
-            <h2>Faculty</h2>
-            <div class="col-md-3">
-              <img src="images/chiyuli.jpg" class="img-responsive img-circle img-right">
-            </div>
-            <div class="col-md-9">
-              <h3>李奇育 教授</h3>
-              <h4>
-                <p>
-                  Assistant Professor 
-                </p>
-              </h4>
-              <h3>
-                <a href="http://people.cs.nctu.edu.tw/~chiyuli/">
-                  <i class="fa fa-link" aria-hidden="true"></i>
-                </a>
-                <a href="mailto:chiyuli@cs.nctu.edu.tw">
-                  <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                </a>
-                <a href="https://scholar.google.com.tw/citations?user=OtMUXigAAAAJ&hl=en">
-                  <i class="fa fa-google" aria-hidden="true"></i>
-                </a>
-              </h3>
+            <h2>Advisor</h2>
+            <div class="col-md-12">
+              <div class="col-md-3 text-center">
+                <img src="images/chiyuli.jpg" class="img-responsive img-circle img-center">
+                <h4>Chi-Yu Li</h4>
+                <h4>李奇育</h4>
+                <h3>
+                  <a href="http://people.cs.nctu.edu.tw/~chiyuli/">
+                    <i class="fa fa-link" aria-hidden="true"></i>
+                  </a>
+                  <a href="mailto:chiyuli@cs.nctu.edu.tw">
+                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                  </a>
+                  <a href="https://scholar.google.com.tw/citations?user=OtMUXigAAAAJ&hl=en">
+                    <i class="fa fa-google" aria-hidden="true"></i>
+                  </a>
+                </h3>
+              </div>
             </div>
           </div>
           <!-- Assistant -->
           <div class="col-md-12 col-xs-12">
             <h2>Assistant</h2>
             <div class="col-md-12">
-              <div class="col-md-3 col-xs-4 text-center">
+              <div class="col-md-3 text-center">
                 <img src="images/alex.jpg" class="img-responsive img-circle img-center">
+                <h4>Wei-Han Chen</h4>
                 <h4>陳暐翰</h4>
                 <h3>
                   <a href="mailto:alex81527@gmail.com">
@@ -122,11 +118,14 @@
             <h2>Master Students</h2>
             <div class="col-md-12">
               <h3>105</h3>
-              <div class="col-md-3 col-xs-4 text-center">
+              <div class="col-md-3 text-center">
                 <img src="images/master/105/cjyeh.jpg" class="img-responsive img-circle img-center">
+                <h4>Chia-Jui Yeh</h4>
                 <h4>葉家睿</h4>
                 <h3>
-                  <a href="http://noname0930.github.io"><i class="fa fa-link" aria-hidden="true"></i></a>
+                  <a href="http://noname0930.github.io">
+                    <i class="fa fa-link" aria-hidden="true"></i>
+                  </a>
                   <a href="mailto:noname19930930@gmail.com">
                     <i class="fa fa-envelope-o" aria-hidden="true"></i>
                   </a>
@@ -135,8 +134,9 @@
                   </a>
                 </h3>
               </div>
-              <div class="col-md-3 col-xs-4 text-center">
+              <div class="col-md-3 text-center">
                 <img src="images/master/105/yylee.jpg" class="img-responsive img-circle img-center">
+                <h4>Yao-Yu Li</h4>
                 <h4>李曜宇</h4>
                 <h3>
                   <a href="mailto:forever3580ya@gmail.com">
@@ -144,8 +144,9 @@
                   </a>
                 </h3>
               </div>
-              <div class="col-md-3 col-xs-4 text-center">
+              <div class="col-md-3 text-center">
                 <img src="images/master/105/gio.jpg" class="img-responsive img-circle img-center">
+                <h4>Giovanni Salinas</h4>
                 <h4>羅吉凡</h4>
                 <h3>
                   <a href="mailto:gsalinaslopez.eic05g@nctu.edu.tw">
@@ -156,9 +157,9 @@
             </div>
             <div class="col-md-12">
               <h3>104</h3>
-              <div class="col-md-3 col-xs-4 text-center">
+              <div class="col-md-3 text-center">
                 <img src="images/master/104/jamie.jpg" class="img-responsive img-circle img-center">
-                <h4>郭建廷</h4>
+                <h4>Chien-Ting Kuo</h4>
                 <h3>
                   <a href="mailto:jamie820103@gmail.com">
                     <i class="fa fa-envelope-o" aria-hidden="true"></i>
