--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- News -->
     <section id="news" class="page">
       <div class="container">
-        <div class="col-md-12 col-xs-12">
+        <div class="col-md-12 col-sm-12 col-xs-12">
           <h1>Recruiting</h1>
           <blockquote>
             <p>
@@ -73,13 +73,13 @@
     <!-- Members -->
     <section id="members" class="page">
       <div class="container">
-        <div class="col-md-12 col-xs-12">
+        <div class="col-md-12 col-sm-12 col-xs-12">
             <h1>Members</h1>
           <!-- Advisor -->
-          <div class="col-md-12 col-xs-12">
+          <div class="col-md-12 col-sm-12 col-xs-12">
             <h2>Advisor</h2>
             <div class="col-md-12">
-              <div class="col-md-3 text-center">
+              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
                 <img src="images/chiyuli.jpg" class="img-responsive img-circle img-center">
                 <h4>Chi-Yu Li</h4>
                 <h4>李奇育</h4>
@@ -98,10 +98,10 @@
             </div>
           </div>
           <!-- Assistant -->
-          <div class="col-md-12 col-xs-12">
+          <div class="col-md-12 col-sm-12 col-xs-12">
             <h2>Assistant</h2>
             <div class="col-md-12">
-              <div class="col-md-3 text-center">
+              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
                 <img src="images/alex.jpg" class="img-responsive img-circle img-center">
                 <h4>Wei-Han Chen</h4>
                 <h4>陳暐翰</h4>
@@ -114,11 +114,11 @@
             </div>
           </div>
           <!-- Master -->
-          <div class="col-md-12 col-xs-12">
+          <div class="col-md-12 col-sm-12 col-xs-12">
             <h2>Master Students</h2>
-            <div class="col-md-12">
+            <div class="col-md-12 col-sm-12 col-xs-12">
               <h3>105</h3>
-              <div class="col-md-3 text-center">
+              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
                 <img src="images/master/105/cjyeh.jpg" class="img-responsive img-circle img-center">
                 <h4>Chia-Jui Yeh</h4>
                 <h4>葉家睿</h4>
@@ -134,7 +134,7 @@
                   </a>
                 </h3>
               </div>
-              <div class="col-md-3 text-center">
+              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
                 <img src="images/master/105/yylee.jpg" class="img-responsive img-circle img-center">
                 <h4>Yao-Yu Li</h4>
                 <h4>李曜宇</h4>
@@ -144,7 +144,7 @@
                   </a>
                 </h3>
               </div>
-              <div class="col-md-3 text-center">
+              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
                 <img src="images/master/105/gio.jpg" class="img-responsive img-circle img-center">
                 <h4>Giovanni Salinas</h4>
                 <h4>羅吉凡</h4>
@@ -155,9 +155,9 @@
                 </h3>
               </div>
             </div>
-            <div class="col-md-12">
+            <div class="col-md-12 col-sm-12 col-xs-12">
               <h3>104</h3>
-              <div class="col-md-3 text-center">
+              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
                 <img src="images/master/104/jamie.jpg" class="img-responsive img-circle img-center">
                 <h4>Chien-Ting Kuo</h4>
                 <h3>
@@ -178,9 +178,9 @@
     <!-- Projects -->
     <section id="projects" class="page">
       <div class="container">
-        <div class="col-md-12 col-xs-12">
+        <div class="col-md-12 col-sm-12 col-xs-12">
           <h1>Projects</h1>
-          <div class="col-md-12 col-xs-12">
+          <div class="col-md-12 col-sm-12 col-xs-12">
             <h2>Customizable WiFi</h2>
             <div class="col-md-5">
               <blockquote>
@@ -196,7 +196,7 @@
               </p>
             </div>
           </div>
-          <div class="col-md-12 col-xs-12">
+          <div class="col-md-12 col-sm-12 col-xs-12">
             <h2>Mobile Security</h2>
             <div class="col-md-5">
               <blockquote>
@@ -213,7 +213,7 @@
             	</p>
             </div>
           </div>
-          <div class="col-md-12 col-xs-12">
+          <div class="col-md-12 col-sm-12 col-xs-12">
             <h2>Software Defined Networking</h2>
             <div class="col-md-5">
               <blockquote>
