--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
               <div class="col-md-3 col-sm-6 col-xs-12 text-center">
                 <img src="images/master/104/jamie.jpg" class="img-responsive img-circle img-center">
                 <h4>Chien-Ting Kuo</h4>
+                <h4>郭建廷</h4>
                 <h3>
                   <a href="mailto:jamie820103@gmail.com">
                     <i class="fa fa-envelope-o" aria-hidden="true"></i>
