--- a/index.html
+++ b/index.html
@@ -116,6 +116,38 @@
           <!-- Master -->
           <div class="col-md-12 col-sm-12 col-xs-12">
             <h2>Master Students</h2>
+            <!-- 106 -->
+            <div class="col-md-12 col-sm-12 col-xs-12">
+              <h3>106</h3>
+              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
+                <img src="images/master/106/csyuanc.jpg" class="img-responsive img-circle img-center">
+                <h4>Chen Syuan Cheng</h4>
+                <h4>陳軒丞</h4>
+                <h3>
+                  <a href="mailto:csyuanc.cs06g@g2.nctu.edu.tw">
+                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                  </a>
+                </h3>
+              </div>
+              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
+                <img src="images/male.jpg" class="img-responsive img-circle img-center">
+                <h4>Yu-Han Lu</h4>
+                <h4>呂昱翰</h4>
+                <h3>
+                  <a href="mailto:yuhanlu.cs02@g2.nctu.edu.tw">
+                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                  </a>
+                </h3>
+              </div>
+              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
+                <img src="images/male.jpg" class="img-responsive img-circle img-center">
+                <h4>Louie Lu</h4>
+                <h4>呂紹榕</h4>
+                <h3>
+                </h3>
+              </div>
+            </div>
+            <!-- 105 -->
             <div class="col-md-12 col-sm-12 col-xs-12">
               <h3>105</h3>
               <div class="col-md-3 col-sm-6 col-xs-12 text-center">
@@ -123,10 +155,10 @@
                 <h4>Chia-Jui Yeh</h4>
                 <h4>葉家睿</h4>
                 <h3>
-                  <a href="http://noname0930.github.io">
+                  <a href="http://cjyeh.me">
                     <i class="fa fa-link" aria-hidden="true"></i>
                   </a>
-                  <a href="mailto:noname19930930@gmail.com">
+                  <a href="mailto:cjyeh@cs.nctu.edu.tw">
                     <i class="fa fa-envelope-o" aria-hidden="true"></i>
                   </a>
                   <a href="https://tw.linkedin.com/in/noname0930">
@@ -155,6 +187,7 @@
                 </h3>
               </div>
             </div>
+            <!-- 104 -->
             <div class="col-md-12 col-sm-12 col-xs-12">
               <h3>104</h3>
               <div class="col-md-3 col-sm-6 col-xs-12 text-center">
