--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <h3>106</h3>
               <div class="col-md-3 col-sm-6 col-xs-12 text-center">
                 <img src="images/master/106/csyuanc.jpg" class="img-responsive img-circle img-center">
-                <h4>Chen Syuan Cheng</h4>
+                <h4>Syuan-Cheng Chen</h4>
                 <h4>陳軒丞</h4>
                 <h3>
                   <a href="mailto:csyuanc.cs06g@g2.nctu.edu.tw">
@@ -130,7 +130,7 @@
                 </h3>
               </div>
               <div class="col-md-3 col-sm-6 col-xs-12 text-center">
-                <img src="images/male.jpg" class="img-responsive img-circle img-center">
+                <img src="images/master/106/yuhanlu.jpg" class="img-responsive img-circle img-center">
                 <h4>Yu-Han Lu</h4>
                 <h4>呂昱翰</h4>
                 <h3>
@@ -144,6 +144,16 @@
                 <h4>Louie Lu</h4>
                 <h4>呂紹榕</h4>
                 <h3>
+                </h3>
+              </div>
+              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
+                <img src="images/male.jpg" class="img-responsive img-circle img-center">
+                <h4>Pei-Yuan Hong</h4>
+                <h4>洪培元</h4>
+                <h3>
+                  <a href="mailto:hp5xio@gmail.com">
+                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                  </a>
                 </h3>
               </div>
             </div>
