fix syntax error

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 		<div id="main-content" class="w3-container w3-content">
 			<!--大圖輪播-->
 			<div class="w3-content w3-display-container w3-margin-top" style="width: 100%">
-			  <img class="mySlides" src="img/img_nature_wide.jpg" style="width:100%">
-			  <img class="mySlides" src="img/img_fjords_wide.jpg" style="width:100%">
-			  <img class="mySlides" src="img/img_mountains_wide.jpg" style="width:100%">
+			  <img class="mySlides" src="img/nctu.jpg" style="width:100%">
+			  <img class="mySlides" src="img/dinner.jpg" style="width:100%">
+			  <img class="mySlides" src="img/lab.jpg" style="width:100%">
 			  <!--大圖輪播介面-->
 			  <div class="w3-center w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
 				<div class="w3-left w3-padding-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
@@ -75,7 +75,7 @@
 		  	</div>
 		</div>
 
-		<!-- script -->
+		<!-- footer -->
 		<div id="footer">
 			<footer class="w3-light-gray w3-padding-top-16">
 				<div class="w3-content w3-container">
