--- a/peoples.html
+++ b/peoples.html
@@ -40,7 +40,7 @@
 				<div class="w3-row w3-center">
 					<div class="w3-quarter w3-hover-opacity">
 						<a href="#">
-				  		<img src="img/hiring.jpg" style="width:60%" class="w3-circle ">
+				  		<img src="img/peoples/hiring.jpg" style="width:60%" class="w3-circle ">
 						</a>
 					</div>
 				</div>
